samples/_failures_safe/1761299913_046689_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05327e75.c: In function ‘main’:
./samples/SAFE/__tmp_05327e75.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
